# kinetic-client

./: .gitmodules  BUILD_INSTRUCTIONS.md  ERROR.md  README.md  kinetic_diagram.md  web.md
.github/workflows/: extension.yml
desktop/: index.html  package-lock.json  package.json  tailwind.config.js
desktop/src/: App.css  App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: installer.rs  lib.rs
desktop/src/app/: KineticControlCenter.tsx
desktop/src/lib/: error.ts
extension/: .gitignore  PRIVACY.md  README.md  STORE_LISTING.md  offscreen.html  package-lock.json  package.json  popup.html  resolve.html  tailwind.config.js  tsconfig.app.json  vite.config.ts
extension/public/: manifest.json
extension/src/: setupTests.ts
extension/src/background/: background.ts
extension/src/offscreen/: offscreen.ts
extension/src/popup/: App.test.tsx  App.tsx  main.tsx
extension/src/resolve/: App.test.tsx  App.tsx
extension/src/styles/: tailwind.css
kinetic-ffi/: Cargo.toml
kinetic-ffi/examples/: test_peerid.rs  test_resolve.rs
kinetic-ffi/src/: frb_generated.rs  lib.rs
kinetic-ffi/src/api/: bootstrap.rs  daemon.rs  delegation.rs  error.rs  identity.rs  mod.rs  resolver.rs  resolver_test.rs  simple.rs
mobile/: .gitignore  flutter_native_splash.yaml  flutter_rust_bridge.yaml  pubspec.yaml
mobile/android/app/: build.gradle.kts  proguard-rules.pro
mobile/integration_test/: simple_test.dart
mobile/ios/Runner/: AppDelegate.swift  Info.plist
mobile/lib/: background_tasks.dart  main.dart
mobile/lib/services/: hardware_attestation_service.dart  secure_storage_service.dart
mobile/lib/src/: constants.dart
mobile/linux/: CMakeLists.txt
mobile/linux/flutter/: generated_plugins.cmake
mobile/macos/Flutter/: GeneratedPluginRegistrant.swift
mobile/rust_builder/android/: build.gradle
mobile/test/: main_test.dart  widget_test.dart
(+46 files in other folders)
