[package]
name = "rust_lib_mobile"
version = "0.1.0"
edition = "2024"

[dependencies]
kinetic-core = { path = "../../kinetic/kinetic-core" }
kinetic-network = { path = "../../kinetic/kinetic-network" }
kinetic-storage = { path = "../../kinetic/kinetic-storage" }
kinetic-kid = { path = "../../kinetic/kinetic-kid" }
libp2p = { version = "0.53", features = ["tokio", "kad", "noise", "yamux", "tcp", "dns", "macros"] }
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.86"
flutter_rust_bridge = "=2.12.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = "0.3.23"
axum = "0.8.9"

[lib]
name = "rust_lib_mobile"
crate-type = ["cdylib", "staticlib", "rlib"]
