[package]
name = "rust_lib_mobile"
version = "0.1.0"
edition = "2024"

[dependencies]
kinetic-core = { path = "../../kinetic/kinetic-core" }
kinetic-network = { path = "../../kinetic/kinetic-network" }
kinetic-storage = { path = "../../kinetic/kinetic-storage" }
kinetic-kid = { path = "../../kinetic/kinetic-kid" }
libp2p = { version = "0.53", features = ["tokio", "kad", "noise", "yamux", "tcp", "dns", "macros"] }
nostr-sdk = "0.35.0"
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.86"
flutter_rust_bridge = "=2.12.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = "0.3.23"
axum = "0.8.9"
url = "2.5"
sha2 = "0.11.0"
tracing = "0.1.40"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
getrandom = "0.2"
hex = "0.4"
[lib]
name = "rust_lib_mobile"
crate-type = ["cdylib", "staticlib", "rlib"]
